deploy/base/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: timerec
spec:
  selector:
      app.kubernetes.io/name: timerec
  ports:
  - name: http
    port: 8080
    targetPort: http

---
apiVersion: networking.k8s.io/v1   # Kind Ingress Config missing
kind: Ingress
metadata:
  name: timerec-ingress
  labels:
    name: timerec-ingress
spec:
  rules:
  - host: timerec.127.0.0.1.nio.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: timerec
            port:
              name: http
